tests/rosetta/out/Prolog/ackermann-function.error
run: <nil>
ERROR: /tmp/ackermann-function.pl:8:22: Syntax error: Operator expected
ERROR: /tmp/ackermann-function.pl:11:3: Syntax error: Illegal start of term
ERROR: /tmp/ackermann-function.pl:17:3: Syntax error: Illegal start of term
ERROR: /tmp/ackermann-function.pl:38:23: Syntax error: Operator priority clash
