tests/rosetta/out/Prolog/ackermann-function.pl
% Generated by Mochi compiler v0.10.30 on 2025-07-18T18:52:56Z
:- style_check(-singleton).
print_val(V) :- number(V), !, format('~g', [V]).
print_val(V) :- write(V).

ackermann(M, N, _Res) :-
    ((M == 0) ->
        _Res is (N + 1).
        true
    ; true
    ),
    ((N == 0) ->
        ackermann((M - 1), 1, _V0),
        _Res = _V0.
        true
    ; true
    ),
    ackermann(M, (N - 1), _V1),
    ackermann((M - 1), _V1, _V2),
    _Res = _V2.

main(_Res) :-
    ackermann(0, 0, _V0),
    term_string(_V0, _V1),
    string_concat("A(0, 0) = ", _V1, _V2),
    print_val(_V2), nl,
    ackermann(1, 2, _V3),
    term_string(_V3, _V4),
    string_concat("A(1, 2) = ", _V4, _V5),
    print_val(_V5), nl,
    ackermann(2, 4, _V6),
    term_string(_V6, _V7),
    string_concat("A(2, 4) = ", _V7, _V8),
    print_val(_V8), nl,
    ackermann(3, 4, _V9),
    term_string(_V9, _V10),
    string_concat("A(3, 4) = ", _V10, _V11),
    print_val(_V11), nl,

:- initialization(main, main).
main :-
    main(_V0),
    _V0,
    true.
